# block25

task2/: CMakeLists.txt
task2/include/: cpu.h  disk.h  gpu.h  kbd.h  ram.h  task2.h
task2/src/: CMakeLists.txt  cpu.cpp  disk.cpp  gpu.cpp  kbd.cpp  main.cpp  ram.cpp
Задача1/: CMakeLists.txt
Задача1/include/: Items.h
Задача1/src/: CMakeLists.txt  main1.cpp
